--- a/index.html
+++ b/index.html
@@ -760,6 +760,74 @@
 
     .detail-actions button:hover { background: #f5f5f5; }
 
+    /* ---- PASSWORD MODAL ---- */
+    #password-overlay {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.4);
+      z-index: 500;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #password-overlay.open { display: flex; }
+
+    #password-card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 28px;
+      width: 320px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.2);
+    }
+
+    #password-card h3 {
+      font-size: 16px;
+      font-weight: 700;
+      color: #1a1a2e;
+      margin-bottom: 16px;
+    }
+
+    #password-input {
+      width: 100%;
+      padding: 10px 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+      font-family: inherit;
+      outline: none;
+      transition: border-color 0.15s;
+    }
+
+    #password-input:focus { border-color: #6366f1; }
+
+    #password-error {
+      color: #dc2626;
+      font-size: 12px;
+      margin-top: 6px;
+      min-height: 18px;
+    }
+
+    #password-buttons {
+      display: flex;
+      gap: 8px;
+      justify-content: flex-end;
+      margin-top: 16px;
+    }
+
+    #password-buttons button {
+      padding: 8px 18px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background: #fff;
+      cursor: pointer;
+      font-size: 13px;
+      font-family: inherit;
+      transition: background 0.15s;
+    }
+
+    #password-buttons button:hover { background: #f5f5f5; }
+
     /* ---- MOBILE ---- */
     @media (max-width: 768px) {
       #toolbar {
@@ -1008,6 +1076,19 @@
     </div>
   </div>
 
+  <!-- Password Modal -->
+  <div id="password-overlay" onclick="if(event.target===this)closePasswordModal()">
+    <div id="password-card">
+      <h3>Enter admin password</h3>
+      <input type="password" id="password-input" placeholder="Password" autocomplete="off" />
+      <div id="password-error"></div>
+      <div id="password-buttons">
+        <button onclick="closePasswordModal()">Cancel</button>
+        <button class="btn-primary" onclick="submitPassword()">OK</button>
+      </div>
+    </div>
+  </div>
+
   <div id="toast"></div>
 
   <script>
@@ -1044,19 +1125,37 @@
     // Obfuscated password check
     const _ak = [100,114,101,97,109,115,111,102,116];
 
-    function checkAdminPassword() {
-      if (adminUnlocked) return true;
-      const input = prompt('Enter admin password:');
-      if (!input) return false;
+    let _passwordCallback = null;
+
+    function checkAdminPassword(onSuccess) {
+      if (adminUnlocked) { onSuccess(); return; }
+      _passwordCallback = onSuccess;
+      document.getElementById('password-input').value = '';
+      document.getElementById('password-error').textContent = '';
+      document.getElementById('password-overlay').classList.add('open');
+      setTimeout(() => document.getElementById('password-input').focus(), 50);
+    }
+
+    function submitPassword() {
+      const input = document.getElementById('password-input').value;
+      if (!input) { document.getElementById('password-error').textContent = 'Please enter a password'; return; }
       const match = input.split('').every((c, i) => c.charCodeAt(0) === _ak[i]) && input.length === _ak.length;
       if (match) {
         adminUnlocked = true;
         sessionStorage.setItem('admin_unlocked', '1');
+        closePasswordModal();
         showToast('Admin access granted');
-        return true;
+        if (_passwordCallback) _passwordCallback();
+      } else {
+        document.getElementById('password-error').textContent = 'Incorrect password';
+        document.getElementById('password-input').value = '';
+        document.getElementById('password-input').focus();
       }
-      showToast('Incorrect password');
-      return false;
+    }
+
+    function closePasswordModal() {
+      document.getElementById('password-overlay').classList.remove('open');
+      _passwordCallback = null;
     }
 
     // ---- TOAST ----
@@ -1348,9 +1447,13 @@
     function toggleAdmin() {
       const panel = document.getElementById('admin-panel');
       if (!panel.classList.contains('open')) {
-        if (!checkAdminPassword()) return;
+        checkAdminPassword(() => {
+          panel.classList.add('open');
+          setTimeout(() => centerChart(), 50);
+        });
+        return;
       }
-      panel.classList.toggle('open');
+      panel.classList.remove('open');
       setTimeout(() => centerChart(), 50);
     }
 
@@ -1792,7 +1895,12 @@
       if (e.key === 'Escape') {
         closeDetail();
         closeEditForm();
+        closePasswordModal();
       }
+    });
+
+    document.getElementById('password-input').addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') submitPassword();
     });
 
     // Warn before leaving with unsaved changes
